--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@tiptap/extension-bullet-list": "^3.11.0",
     "@tiptap/extension-code-block": "^3.11.0",
     "@tiptap/extension-code-block-lowlight": "^3.11.0",
+    "@tiptap/extension-collaboration": "^3.11.0",
     "@tiptap/extension-color": "^3.11.0",
     "@tiptap/extension-document": "^3.11.0",
+    "@tiptap/extension-drag-handle": "^3.11.0",
+    "@tiptap/extension-drag-handle-vue-3": "^3.11.0",
     "@tiptap/extension-dropcursor": "^3.11.0",
     "@tiptap/extension-gapcursor": "^3.11.0",
     "@tiptap/extension-hard-break": "^3.11.0",
     "@tiptap/extension-heading": "^3.11.0",
     "@tiptap/extension-image": "^3.11.0",
     "@tiptap/extension-list-item": "^3.11.0",
+    "@tiptap/extension-node-range": "^3.11.0",
     "@tiptap/extension-ordered-list": "^3.11.0",
     "@tiptap/extension-paragraph": "^3.11.0",
     "@tiptap/extension-placeholder": "^3.11.0",
@@ -41,13 +45,16 @@
     "@tiptap/starter-kit": "^3.11.0",
     "@tiptap/suggestion": "^3.11.0",
     "@tiptap/vue-3": "^3.11.0",
+    "@tiptap/y-tiptap": "^3.0.1",
     "@unhead/vue": "^2.0.19",
     "jsonwebtoken": "^9.0.2",
     "lowlight": "^3.3.0",
     "nuxt": "4.2.1",
     "tippy.js": "^6.3.7",
     "uuid": "^13.0.0",
-    "vue-draggable-next": "^2.3.0"
+    "vue-draggable-next": "^2.3.0",
+    "y-protocols": "^1.0.6",
+    "yjs": "^13.6.27"
   },
   "devDependencies": {
     "@nuxt/eslint": "^1.10.0",
